--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,3 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/springbootdemo
-    username: postgres
-    password: root
-    platform: POSTGRESQL
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-server:
-  port: 8080
+  profiles:
+    active: dev
