--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,8 +1,6 @@
-FROM openjdk:8-jre
-WORKDIR /app
-VOLUME ["/app"]
-COPY maven/app.jar app.jar
-COPY maven/start.sh start.sh
-COPY maven/wait-for-it.sh wait-for-it.sh
-RUN sh -c 'touch app.jar'
-ENTRYPOINT ["./start.sh"]
+FROM frolvlad/alpine-oraclejdk8:slim
+VOLUME /tmp
+ADD springbootjava-0.0.1-SNAPSHOT.jar app.jar
+RUN sh -c 'touch /app.jar'
+ENV JAVA_OPTS=""
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
