--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 
                     <!-- (optional) name for binary executable, if not set will just -->
                     <!-- make the regular jar artifact executable -->
-                    <programFile>germ</programFile>
+                    <programFile>springbootjava</programFile>
                 </configuration>
 
                 <executions>
